# desktop-watcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: config.example.toml  desktop-watcher.service
src/cli/: main.cpp
src/core/: categorizer.cpp  categorizer.hpp  config.cpp  config.hpp  db.cpp  db.hpp  models.hpp
src/daemon/: daemon_control.cpp  daemon_control.hpp  idle.cpp  idle.hpp  main.cpp  poller.cpp  poller.hpp
src/platform/: gnome_wayland.cpp  window_info.hpp  x11_window.cpp
tests/: test_categorizer.cpp  test_config.cpp  test_daemon_control.cpp  test_db.cpp
